Fix spacing content on 1150px

--- a/resources/assets/sass/pages/home/_headline.scss
+++ b/resources/assets/sass/pages/home/_headline.scss
@@ -14,7 +14,7 @@
         column-gap: 0;
         column-fill: initial;
 
-        @media only screen and (max-width: 1150px) {
+        @media only screen and (max-width: 1170px) {
             padding: 0 16px;
         }
 
