--- a/resources/assets/sass/pages/post-detail/_share.scss
+++ b/resources/assets/sass/pages/post-detail/_share.scss
@@ -2,7 +2,7 @@
     margin: 40px auto 55px auto;
     max-width: 1150px;
 
-    @media only screen and (max-width: 1150px) {
+    @media only screen and (max-width: 1170px) {
         padding: 0 16px;
     }
 
