--- a/resources/assets/sass/pages/post-list/_post.scss
+++ b/resources/assets/sass/pages/post-list/_post.scss
@@ -6,7 +6,7 @@
         width: 100%;
         margin-left: auto;
         margin-right: auto;
-        @media only screen and (max-width: 1150px) {
+        @media only screen and (max-width: 1170px) {
             padding: 0 16px;
         }
 
@@ -22,7 +22,7 @@
         margin-right: auto;
         max-width: 1150px;
         width: 100%;
-        @media only screen and (max-width: 1150px) {
+        @media only screen and (max-width: 1170px) {
             padding: 0 16px;
         }
     }
