--- a/resources/assets/sass/partials/_breadcrumbs.scss
+++ b/resources/assets/sass/partials/_breadcrumbs.scss
@@ -10,7 +10,7 @@
     padding: 0;
     padding-bottom: 16px;
 
-	@media only screen and (max-width: 1150px) {
+	@media only screen and (max-width: 1170px) {
         padding-left: 16px;
         padding-right: 16px;
     }
